--- a/src/app/components/cities-full-view/cities-full-view.component.css
+++ b/src/app/components/cities-full-view/cities-full-view.component.css
@@ -42,4 +42,26 @@ h1 {
 }
 
 
+@media only screen and (max-width: 1150px) {
+  .cities-grid-con {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 780px) {
+  .main-grid-con {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+}
+
+@media only screen and (max-width: 450px) {
+  .inner-con {
+    padding: 1rem;
+    width: 100%;
+  }
+}
 
