--- a/src/app/components/home-page/home-page.component.css
+++ b/src/app/components/home-page/home-page.component.css
@@ -153,6 +153,7 @@ p, span {
   font-weight: 300;
   font-size: 1rem;
   margin-bottom: 1rem;
+  width: max-content;
 }
 
 .reviews-quan {
@@ -162,4 +163,60 @@ p, span {
 .best-adds {
   background-color: #e9ecef;
   padding: 2.4rem;
+}
+
+@media only screen and (max-width: 1300px) {
+  .light-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 1250px) {
+  .grid-con {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .main-con {
+    width: 100%;
+  }
+
+  mat-icon {
+    width: max-content;
+  }
+}
+
+@media only screen and (max-width: 880px) {
+  .light-grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .light-add {
+    width: 100%;
+    max-width: 30rem;
+  }
+
+
+}
+
+@media only screen and (max-width: 550px) {
+  .main-con {
+    flex-direction: column;
+  }
+
+  .home-con, .best-adds{
+    padding: 1rem;
+  }
+}
+
+
+@media only screen and (max-width: 450px) {
+  .light-img {
+    display: none;
+  }
 }
