--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,21 +1,27 @@
 <div class="menu-con flex flex-col align-center justify-center">
+
   <div class="nav-links-con flex align-center space-between" >
+
     <div class="flex align-center" style="gap: 1.2rem">
       <div class="flex align-center menu-link" routerLink="/" style="gap: 1rem">
         <mat-icon>school</mat-icon>
         <p>E-Tutor</p>
       </div>
 
-      <div class="link" (click)="onAdvertisementsForCategorySearching('tutor')">
+      <div class="link" *ngIf="!showHamburgerIcon" (click)="onAdvertisementsForCategorySearching('tutor')">
         Tutors advertisements
       </div>
 
-      <div class="link" (click)="onAdvertisementsForCategorySearching('student')">
+      <div class="link" *ngIf="!showHamburgerIcon" (click)="onAdvertisementsForCategorySearching('student')">
         Students advertisements
       </div>
     </div>
 
-    <div class="flex align-center" style="gap: 2rem;" *ngIf="!isAuthenticated else authenticatedMenu">
+    <mat-icon *ngIf="showHamburgerIcon" style="cursor: pointer" (click)="onMenuOpening()" class="responsive-icon">
+      menu
+    </mat-icon>
+
+    <div class="flex align-center"  style="gap: 2rem;" *ngIf="(!isAuthenticated && !showHamburgerIcon) else authenticatedMenu">
       <div class="link" routerLink="/login" >
         Login
       </div>
@@ -27,8 +33,8 @@
       </div>
     </div>
 
-    <ng-template #authenticatedMenu>
-      <div class="user-bar" >
+    <ng-template #authenticatedMenu >
+      <div class="user-bar" *ngIf="!showHamburgerIcon">
         <div [matMenuTriggerFor]="appMenu" class="flex align-center" style="cursor: pointer; gap: 1rem">
           <p class="username">Hi {{ currentUser?.firstName }} {{ currentUser?.lastName}}</p>
           <img class="profile-img" [src]="currentUser?.profileImagePath ? sanitizerPhoto(currentUser?.profileImagePath)
@@ -59,10 +65,12 @@
 
   <div class="form-con" *ngIf="shouldBeSearchFormVisible">
     <form class="flex align-end justify-center" style="gap: 1rem" (submit)="onAdvertisementsSearching($event)">
-      <mat-icon>search</mat-icon>
-      <mat-form-field class="flex" >
-        <input [(ngModel)]="keyPhrase" name="keyPhrase" matInput class="search-input" style="color: #333" placeholder="Ex. Physics">
-      </mat-form-field>
+      <div class="flex align-end" style="gap: 1rem">
+        <mat-icon>search</mat-icon>
+        <mat-form-field class="flex" >
+          <input [(ngModel)]="keyPhrase" name="keyPhrase" matInput class="search-input" style="color: #333" placeholder="Ex. Physics">
+        </mat-form-field>
+      </div>
 
 
       <mat-form-field appearance="fill">
