--- a/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.css
+++ b/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.css
@@ -45,7 +45,7 @@ p {
 .all-con {
   background-color: #fff;
   padding: 3.4rem 2.4rem;
-
+  width: 100%;
   margin-bottom: 1.8rem;
 }
 
@@ -118,7 +118,13 @@ p {
 }
 
 .right-panel {
-  width: 100%;
+  width: 70%;
+
+
+}
+
+.left-panel {
+  width: 25%;
 }
 
 .content {
@@ -146,4 +152,29 @@ p {
 
 ul {
   padding-left: 1.2rem;
+}
+
+@media only screen and (max-width: 1100px) {
+  .inner-con {
+    width: 100%;
+  }
+
+  .single-advertisement-con {
+    padding: 1rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .all-con {
+     flex-direction: column;
+    align-items: center;
+  }
+
+  .right-panel, .left-panel {
+    width: 100%;
+  }
+
+  .add-desc {
+    width: 100%;
+  }
 }
