--- a/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.html
+++ b/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.html
@@ -1,5 +1,5 @@
 <div class="single-advertisement-con flex-col align-center ">
-  <div style="width: 65rem">
+  <div style="max-width: 65rem" class="inner-con">
     <div class="all-con flex " style="gap: 3.2rem">
       <div class="left-panel flex-col align-start">
         <img class="profile-image" style="align-self: center" [src]="advertisement?.userPayload?.profileImagePath"/>
