--- a/src/app/components/profile-panel/profile-panel.component.css
+++ b/src/app/components/profile-panel/profile-panel.component.css
@@ -5,3 +5,17 @@
   width: 100%;
 }
 
+@media only screen and (max-width: 1200px) {
+  .profile-con {
+    flex-direction: column;
+
+  }
+
+  .outlet-con {
+    width: 100%;
+  }
+
+  app-navigation {
+    width: 100%;
+  }
+}
