--- a/src/app/components/advertisements/advertisement-row/advertisement-row.component.css
+++ b/src/app/components/advertisements/advertisement-row/advertisement-row.component.css
@@ -44,8 +44,13 @@
 }
 
 .short-desc {
-  width: 75%;
   margin-bottom: 2.8rem;
+  word-wrap: break-word;
+  max-width: 30rem;
+}
+
+.main-info-con {
+
 }
 
 .places-con p {
@@ -85,6 +90,8 @@ span {
   width: max-content;
 }
 
+
+
 .phone-con {
   color: #2AC59B;
 }
@@ -99,6 +106,8 @@ span {
   width: max-content;
 }
 
+
+
 .price {
   font-size: 1.2rem;
   font-weight: 300;
@@ -109,4 +118,46 @@ span {
 .phone-number {
   font-size: 1rem;
   font-weight: 300;
+}
+
+@media only screen and (max-width: 980px) {
+  .inner-main-con {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+
+  .info-container {
+    align-items: flex-start;
+  }
+}
+@media only screen and (max-width: 750px) {
+  .short-desc {
+    width: 90%;
+    max-width: 90%;
+  }
+
+  .main-info-con {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .places-con {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .img-div-con {
+    gap: 0.8rem !important;
+  }
+
+  .profile-img {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .stars-container {
+    flex-direction: column;
+    align-items: flex-end;
+  }
 }
