--- a/src/app/components/advertisements/advertisement-row/advertisement-row.component.html
+++ b/src/app/components/advertisements/advertisement-row/advertisement-row.component.html
@@ -1,51 +1,53 @@
-<div class="add-con flex align-start space-between"  (click)="onAdvertisementClicking($event)">
-  <div class="flex" style="gap: 2.4rem">
-    <div>
-      <img [src]="advertisement.userPayload.profileImagePath ? advertisement.userPayload.profileImagePath : 'assets/images/default_avatar.png'" class="profile-img"/>
-    </div>
-    <div class="flex-col align-start main-info-con">
-      <p class="subject">{{ advertisement.subjectName }}</p>
-      <p class="author-name">{{ advertisement.userPayload.firstName }}  {{ advertisement.userPayload.lastName}}</p>
-      <p class="short-desc">{{ advertisement.shortDescription }}</p>
-      <div class="flex align-center places-con" style="gap: 1.2rem">
-        <div class="places-list flex align-center" style="gap: 0.8rem">
-          <div class="flex align-center" *ngFor="let location of advertisement.placesNames.slice(0, 2)">
-            <mat-icon>location_on</mat-icon>
-            <p class="places" style="width: max-content">{{ location | titlecase}}</p>
+<div class="add-con"  style="width: 100%" (click)="onAdvertisementClicking($event)">
+  <div style="width: 100%" class="flex align-start space-between inner-main-con">
+    <div class="flex img-div-con" style="gap: 2.4rem; width: 80%">
+      <div>
+        <img [src]="advertisement.userPayload.profileImagePath ? advertisement.userPayload.profileImagePath : 'assets/images/default_avatar.png'" class="profile-img"/>
+      </div>
+      <div class="flex-col align-start main-info-con">
+        <p class="subject">{{ advertisement.subjectName }}</p>
+        <p class="author-name">{{ advertisement.userPayload.firstName }}  {{ advertisement.userPayload.lastName}}</p>
+        <p class="short-desc">{{ advertisement.shortDescription }}</p>
+        <div class="flex align-center places-con" style="gap: 1.2rem">
+          <div class="places-list flex align-center" style="gap: 0.8rem">
+            <div class="flex align-center" *ngFor="let location of advertisement.placesNames.slice(0, 2)">
+              <mat-icon>location_on</mat-icon>
+              <p class="places" style="width: max-content">{{ location | titlecase}}</p>
+
+            </div>
+            <span *ngIf="advertisement.placesNames.length > 2">...</span>
 
           </div>
-          <span *ngIf="advertisement.placesNames.length > 2">...</span>
-
-        </div>
-        <div class="flex align-center" style="gap: 0.2rem">
-          <div class="star-ratings">
-            <div class="fill-ratings" [ngStyle]="{ width : (advertisement.ratingAverage) + '%'}">
-              <span>★★★★★</span>
+          <div class="flex align-center stars-container" style="gap: 0.2rem">
+            <div class="star-ratings">
+              <div class="fill-ratings" [ngStyle]="{ width : (advertisement.ratingAverage) + '%'}">
+                <span>★★★★★</span>
+              </div>
+              <div class="empty-ratings">
+                <span>★★★★★</span>
+              </div>
             </div>
-            <div class="empty-ratings">
-              <span>★★★★★</span>
-            </div>
+            <p style="color: #2AC59B; font-weight: 300; width: max-content">{{ advertisement.reviewsQuantity }} reviews</p>
           </div>
-          <p style="color: #2AC59B; font-weight: 300;">{{ advertisement.reviewsQuantity }} reviews</p>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="flex-col flex-end info-container">
-    <div class="price-con flex align-center">
-      <p class="price">{{ advertisement.price }} zł / {{ advertisement.minutesDuration }} min</p>
+    <div class="flex-col flex-end info-container">
+      <div class="price-con flex align-center">
+        <p class="price">{{ advertisement.price }} zł / {{ advertisement.minutesDuration }} min</p>
+      </div>
+      <div class="flex align-center phone-con" style="gap: 0.4rem">
+        <mat-icon>phone</mat-icon>
+        <p class="phone-number" *ngIf="advertisement.userPayload.phoneNumber else noPhone">{{ advertisement.userPayload.phoneNumber}}</p>
+        <ng-template #noPhone>
+          <p class="phone-number">No phone</p>
+        </ng-template>
+      </div>
+      <button class="send-message second-btn flex align-center" *ngIf="isAuthenticated() && advertisement.userPayload.id !== currentUser.id" style="gap: 0.6rem;">
+        <mat-icon>message</mat-icon>
+        Send message
+      </button>
     </div>
-    <div class="flex align-center phone-con" style="gap: 0.4rem">
-      <mat-icon>phone</mat-icon>
-      <p class="phone-number" *ngIf="advertisement.userPayload.phoneNumber else noPhone">{{ advertisement.userPayload.phoneNumber}}</p>
-      <ng-template #noPhone>
-        <p class="phone-number">No phone</p>
-      </ng-template>
-    </div>
-    <button class="send-message second-btn flex align-center" *ngIf="isAuthenticated() && advertisement.userPayload.id !== currentUser.id" style="gap: 0.6rem;">
-      <mat-icon>message</mat-icon>
-      Send message
-    </button>
   </div>
 </div>
