--- a/src/app/components/profile-panel/activities/dashboard/dashboard.component.html
+++ b/src/app/components/profile-panel/activities/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="grid-con">
   <div class="user-panel panel flex-col align-start">
     <h4>User panel</h4>
-    <div class="flex align-center" style="gap: 2.4rem">
+    <div class="flex align-center res-flex" style="gap: 2.4rem">
       <div class="flex-col align-center" style="gap: 0.6rem">
         <img class="user-img" [src]="currentUser?.profileImagePath ? sanitizerPhoto(currentUser?.profileImagePath)
              : 'assets/images/default_avatar.png'"/>
