--- a/src/app/components/profile-panel/profile-panel.component.html
+++ b/src/app/components/profile-panel/profile-panel.component.html
@@ -1,6 +1,6 @@
 <div class="profile-con flex align-start justify-center">
   <app-navigation></app-navigation>
-  <div>
+  <div class="outlet-con">
     <router-outlet></router-outlet>
   </div>
 </div>
