--- a/src/app/components/profile-panel/navigation/navigation.component.css
+++ b/src/app/components/profile-panel/navigation/navigation.component.css
@@ -1,18 +1,16 @@
 .main-nav-con, mat-sidenav-content {
-  /*position: fixed;*/
-  /*left: 0;*/
-  /*top: 0;*/
   height: 100%;
-  min-height: 80vh;
+  /*min-height: 80vh;*/
   width: 15rem;
   z-index: 20;
-  background-color: #ffff;
   margin: 0 !important;
+  /*padding: 0.4rem 0;*/
 }
 
-mat-sidenav-content {
-
+.main-nav-con {
+  min-height: 100vh;
 }
+
 
 .activity {
   background-color: #f8f9fa;
