--- a/src/app/components/profile-panel/activities/create-advertisement/create-advertisement.component.html
+++ b/src/app/components/profile-panel/activities/create-advertisement/create-advertisement.component.html
@@ -89,10 +89,10 @@
       <div>
         <h1 style="color: #666">Days and hours of lessons</h1>
         <div class="flex-col" style="gap: 1.8rem">
-          <div *ngFor="let availablity of availabilityWithDaysAndHours" class="flex align-center" style="gap: 2.4rem;">
+          <div *ngFor="let availablity of availabilityWithDaysAndHours" class="flex align-center hours-con" style="gap: 2.4rem;">
             <mat-checkbox color="primary"  [checked]="availablity.checked" [value]="availablity.dayName"
                           (change)="onAvailabilityChanging($event)">{{ availablity.dayName }}</mat-checkbox>
-            <div *ngIf="availablity.checked" class="flex align-center" style="gap: 1.8rem">
+            <div *ngIf="availablity.checked" class="flex align-center hours-con responsive-margin" style="gap: 1.8rem">
               <div class="flex align-end" style="gap: 0.4rem">
                 <p>From</p>
                 <mat-form-field  appearance="fill" style="gap: 0.6rem">
