--- a/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.html
+++ b/src/app/components/advertisements/single-advertisement-view/single-advertisement-view.component.html
@@ -99,10 +99,11 @@
     <div class="reviews-con" style="align-self: flex-start">
       <p style="font-size: 1.4rem">Last opinions</p>
       <p style="font-size: 0.8rem; color: #999999; margin-bottom: 1.2rem">Opinion's number: {{ advertisement?.reviewsQuantity }}</p>
-      <button class="white-button second-btn flex align-center" (click)="onOpinionCreating()" style="gap: 0.2rem">
+      <button *ngIf="isAuthenticated()" class="white-button second-btn flex align-center" (click)="onOpinionCreating()" style="gap: 0.2rem">
         <mat-icon>record_voice_over</mat-icon>
         Opinion
       </button>
+      <p *ngIf="reviews.length === 0" class="alert alert-warning" style="width: 100%">No reviews posted yet</p>
 
       <div class="flex-col " style="width: 100%; gap: 2.4rem; margin-bottom: 3.8rem">
         <div class="option-con flex align-start" style="gap: 1.2rem;" *ngFor="let review of reviews">
